--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 192.168.1.42",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "gray-matter": "^4.0.3",
-    "marked": "^4.0.14",
+    "gray-matter": "4.0.3",
+    "marked": "4.0.14",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
